hphp/hack/test/typecheck/expression_trees/dict_error.php.exp
ERROR: File "dict_error.php", line 74, characters 12-13:
Invalid argument (Typing[4110])
  File "dict_error.php", line 21, characters 39-84:
  Expected `Spliceable<DictError, mixed, _>`
  File "dict_error.php", line 71, characters 15-24:
  But got `ExampleInt`
